# HK-SG-Interview

./: .clang-format  .gitignore  CMakeLists.txt  README.md  interest_calculation.cc  is_palind_rome.cc  is_special.cc  lint.py  peak_sequence.cc  perfect_number.cc  pointer_example.cc  reformat.py  reverse_string.cc
.devcontainer/: Dockerfile  devcontainer.json
